Drop rng-utils in test
It really doesn't help us much. We don't need the safe concurrent
access and I don't want to thread the breaking API change through all
past LTSes for one single bench.

--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -72,7 +72,7 @@ benchmark bench
                , bloodhound
                , deepseq
                , criterion >= 1.1.0.0
-               , rng-utils
+               , random
                , uuid
                , text
                , unordered-containers
