--- a/stack.yaml
+++ b/stack.yaml
@@ -3,7 +3,9 @@ packages:
   - katip
   - katip-elasticsearch
 extra-deps:
-  - bloodhound-0.15.0.0
+  # These can be dropped probably as soon as they hit an LTS
+  - bloodhound-0.15.0.2
+  - http-types-0.12
 flags:
   katip:
     lib-Werror: true
