--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -53,6 +53,7 @@ library
     , http-types >= 0.8 && < 0.13
     , time >= 1 && < 1.9
     , bytestring
+    , semigroups
   hs-source-dirs:      src
   default-language:    Haskell2010
   hs-source-dirs:      src
