--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -36,9 +36,9 @@ library
   build-depends:
       base >=4.6 && <5
     , katip >= 0.2.0.0 && < 0.6
-    , bloodhound >= 0.13.0.0 && < 0.16
+    , bloodhound >= 0.16.0.0 && < 0.17
     , uuid >= 1.3.12 && < 1.4
-    , aeson >=0.6 && <1.4
+    , aeson >=0.6
     , stm >= 2.4.3 && < 2.5
     , stm-chans >= 3.0.0.2 && < 3.1
     , async >= 2.0.1.0 && < 3.0
