--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -54,7 +54,7 @@ library
     OverloadedStrings
 
   build-depends: base >=4.5 && <5
-               , aeson >=0.6 && <1.4
+               , aeson >=0.6
                , async < 3.0.0.0
                , auto-update >= 0.1 && < 0.2
                , bytestring >= 0.9 && < 0.11
