--- a/stack.yaml
+++ b/stack.yaml
@@ -4,6 +4,7 @@ packages:
   - katip-elasticsearch
 extra-deps:
   - bloodhound-0.16.0.0
+  - unliftio-core-0.1.1.0
 flags:
   katip:
     lib-Werror: true
