--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -80,17 +80,15 @@ library
                , semigroups
                , unliftio-core >= 0.1 && < 0.2
                , stm >= 2.4
-
+               , unix-compat
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:        -Wall
   if flag(lib-Werror)
     ghc-options: -Werror
   if os(windows)
-    build-depends: Win32 >=2.3 && <2.6
+    build-depends: Win32 >= 2.5.0
     exposed-modules: Katip.Compat
-  else
-    build-depends: unix >= 2.5 && <2.8
 
 
 test-suite test
