--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -1,7 +1,7 @@
 name:                katip-elasticsearch
 synopsis:            ElasticSearch scribe for the Katip logging framework.
 description:         See README.md for more details.
-version:             0.5.1.0
+version:             0.5.1.1
 license:             BSD3
 license-file:        LICENSE
 author:              Ozgun Ataman, Michael Xavier
@@ -18,7 +18,7 @@ extra-source-files:
   bench/Main.hs
   examples/example.hs
   test/Main.hs
-tested-with: GHC == 7.8.4, GHC== 7.10.3
+tested-with: GHC == 7.8.4, GHC== 7.10.3, GHC == 8.0.1, GHC == 8.2.2, GHC == 8.4.3
 
 source-repository head
   type:     git
@@ -35,7 +35,7 @@ library
     Katip.Scribes.ElasticSearch.Internal
   build-depends:
       base >=4.6 && <5
-    , katip >= 0.2.0.0 && < 0.7
+    , katip >= 0.2.0.0 && < 0.8
     , bloodhound >= 0.13.0.0 && < 0.17
     , uuid >= 1.3.12 && < 1.4
     , aeson >=0.6
