--- a/stack.yaml
+++ b/stack.yaml
@@ -2,6 +2,7 @@ resolver: lts-12.22
 packages:
   - katip
   - katip-elasticsearch
+  - katip-datadog
 extra-deps:
   - bloodhound-0.16.0.0
   - unliftio-core-0.1.2.0
