Some package cleanup to get the full build working

--- a/katip-datadog/katip-datadog.cabal
+++ b/katip-datadog/katip-datadog.cabal
@@ -33,6 +33,8 @@ library
   build-depends:
       --TODO: shed a lot of these
       base >=4.4.0.0 && <5
+    , aeson >= 1.0.0.0
+    , bytestring
     , katip >= 0.2.0.0 && < 0.8
     , text
     , connection
