--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -35,7 +35,7 @@ library
     Katip.Scribes.ElasticSearch.Internal
   build-depends:
       base >=4.6 && <5
-    , katip >= 0.2.0.0 && <= 0.8
+    , katip >= 0.2.0.0 && < 0.9
     , bloodhound >= 0.13.0.0 && < 0.17
     , uuid >= 1.3.12 && < 1.4
     , aeson >=0.6
