--- a/katip-datadog/katip-datadog.cabal
+++ b/katip-datadog/katip-datadog.cabal
@@ -46,5 +46,32 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
   hs-source-dirs:      src
+  ghc-options: -Wall
   if flag(lib-Werror)
-    ghc-options: -Wall -Werror
+    ghc-options: -Werror
+
+
+test-suite test
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  hs-source-dirs: test
+  default-language:    Haskell2010
+  other-modules:
+    Katip.Tests.Scribes.Datadog.TCP
+  build-depends: base
+               , katip
+               , katip-datadog
+               , conduit
+               , conduit-extra
+               , tasty
+               , tasty-hunit
+               , aeson
+               , unordered-containers
+               , containers
+               , safe-exceptions
+               , async
+               , attoparsec
+               , text
+  ghc-options: -Wall
+  if flag(lib-Werror)
+    ghc-options: -Werror
