--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -42,7 +42,7 @@ library
     , stm >= 2.4.3 && < 2.6
     , stm-chans >= 3.0.0.2 && < 3.1
     , async >= 2.0.1.0 && < 3.0
-    , enclosed-exceptions >= 1.0.0 && < 1.1
+    , safe-exceptions >= 0.1.0.0
     , http-client >= 0.3 && < 0.6
     , text >= 0.11 && < 1.3
     , retry >= 0.7 && < 0.8
