--- a/katip-logzio/katip-logzio.cabal
+++ b/katip-logzio/katip-logzio.cabal
@@ -47,6 +47,7 @@ library
     , http-types
     , text
     , bytestring
+    , scientific
   hs-source-dirs:      src
   default-language:    Haskell2010
   hs-source-dirs:      src
