--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -35,23 +35,23 @@ library
     Katip.Scribes.ElasticSearch.Internal
   build-depends:
       base >=4.6 && <5
-    , bloodhound >= 0.13.0.0 && < 0.17
-    , uuid >= 1.3.12 && < 1.4
     , katip >= 0.8.0.0
+    , bloodhound >= 0.13.0.0
+    , uuid >= 1.3.12
     , aeson >=0.6
-    , stm >= 2.4.3 && < 2.6
-    , stm-chans >= 3.0.0.2 && < 3.1
-    , async >= 2.0.1.0 && < 3.0
+    , stm >= 2.4.3
+    , stm-chans >= 3.0.0.2
+    , async >= 2.0.1.0
     , safe-exceptions >= 0.1.0.0
-    , http-client >= 0.3 && < 0.6
-    , text >= 0.11 && < 1.3
-    , retry >= 0.7 && < 0.8
+    , http-client >= 0.3
+    , text >= 0.11
+    , retry >= 0.7
     , exceptions
-    , scientific >= 0.3.0.0 && < 0.4
-    , unordered-containers >= 0.1.0.0 && < 0.3
-    , transformers >= 0.2 && < 0.6
-    , http-types >= 0.8 && < 0.13
-    , time >= 1 && < 1.9
+    , scientific >= 0.3.0.0
+    , unordered-containers >= 0.1.0.0
+    , transformers >= 0.2
+    , http-types >= 0.8
+    , time >= 1
     , bytestring
     , semigroups
   hs-source-dirs:      src
