--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -56,29 +56,29 @@ library
   build-depends: base >=4.9.0.0 && <5
                , aeson >=0.6
                , async < 3.0.0.0
-               , auto-update >= 0.1 && < 0.2
-               , bytestring >= 0.9 && < 0.11
-               , containers >=0.4 && <0.7
-               , either >= 4 && < 5.1
+               , auto-update >= 0.1
+               , bytestring >= 0.9
+               , containers >=0.4
+               , either >= 4
                , safe-exceptions >= 0.1.0.0
-               , hostname >=1.0 && <1.1
-               , old-locale >= 1.0 && < 1.1
-               , string-conv >= 0.1 && < 0.2
-               , template-haskell >= 2.8 && < 2.15
-               , text >= 0.11 && <1.3
-               , time >= 1 && < 1.9
-               , transformers >= 0.3 && < 0.6
+               , hostname >=1.0
+               , old-locale >= 1.0
+               , string-conv >= 0.1
+               , template-haskell >= 2.8
+               , text >= 0.11
+               , time >= 1
+               , transformers >= 0.3
                , transformers-compat
-               , unordered-containers >= 0.2 && < 0.3
-               , monad-control >= 1.0 && < 1.1
-               , mtl >= 2.0 && < 2.3
-               , transformers-base >= 0.3 && < 0.6
-               , resourcet >= 1.1 && < 1.3
+               , unordered-containers >= 0.2
+               , monad-control >= 1.0
+               , mtl >= 2.0
+               , transformers-base >= 0.3
+               , resourcet >= 1.1
                , scientific >= 0.3.3.0
-               , microlens >= 0.2.0.0 && < 0.5
-               , microlens-th >= 0.1.0.0 && < 0.5
+               , microlens >= 0.2.0.0
+               , microlens-th >= 0.1.0.0
                , semigroups
-               , unliftio-core >= 0.1 && < 0.2
+               , unliftio-core >= 0.1
                , stm >= 2.4
 
   hs-source-dirs:      src
@@ -114,7 +114,7 @@ test-suite test
                , template-haskell
                , text
                , time
-               , time-locale-compat >= 0.1.0.1 && < 0.2
+               , time-locale-compat >= 0.1.0.1
                , directory
                , regex-tdfa
                , unordered-containers
