--- a/katip-datadog/katip-datadog.cabal
+++ b/katip-datadog/katip-datadog.cabal
@@ -1,5 +1,6 @@
 name:                katip-datadog
 version:             0.0.1.0
+synopsis:            Datadog scribe for the Katip logging framework
 description:         See README.md for more details.
 license:             BSD3
 license-file:        LICENSE
