--- a/katip-logzio/katip-logzio.cabal
+++ b/katip-logzio/katip-logzio.cabal
@@ -52,7 +52,7 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
   hs-source-dirs:      src
-  ghc-options: -Wall -j -Wall -Wnoncanonical-monad-instances
+  ghc-options: -Wall -Wall -Wnoncanonical-monad-instances
   if flag(lib-Werror)
     ghc-options: -Werror
 
@@ -88,6 +88,6 @@ test-suite test
                , uri-bytestring
                , warp
                , http-types
-  ghc-options: -j -Wall -threaded -rtsopts -with-rtsopts=-N  -Wnoncanonical-monad-instances
+  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N  -Wnoncanonical-monad-instances
   if flag(lib-Werror)
     ghc-options: -Werror
