--- a/katip-logzio/katip-logzio.cabal
+++ b/katip-logzio/katip-logzio.cabal
@@ -1,5 +1,5 @@
 name:                katip-logzio
-version:             0.1.0.0
+version:             0.1.1.0
 synopsis:            Logz.IO scribe for the Katip logging framework
 description:         See README.md for more details.
 license:             BSD3
@@ -49,6 +49,7 @@ library
     , text
     , bytestring
     , scientific
+    , stm-chans >= 2.0.0
   hs-source-dirs:      src
   default-language:    Haskell2010
   hs-source-dirs:      src
