--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -78,7 +78,7 @@ library
                , microlens >= 0.2.0.0
                , microlens-th >= 0.1.0.0
                , semigroups
-               , unliftio-core >= 0.1
+               , unliftio-core >= 0.1 && < 0.2
                , stm >= 2.4
 
   hs-source-dirs:      src
