Allow for unliftio-core 0.2's breaking changes
I much prefer either allowing for newer versions via CPP or if that's
impractical, dropping support for the older version of a dependency
than instituting upper bounds. Upper bounds in my opinion just make
your library more likely to stall out on an old version of a
dependency or create tons of busy work by forcing you to constantly
poke upper bounds that don't end up being necessary for the upgrade.

cc #117

--- a/stack.yaml
+++ b/stack.yaml
@@ -6,7 +6,8 @@ packages:
   - katip-logzio
 extra-deps:
   - bloodhound-0.16.0.0
-  - unliftio-core-0.1.2.0
+  - unliftio-core-0.2.0.1
+  - resourcet-1.2.3
 flags:
   katip:
     lib-Werror: true
