Updates to prepare for bloodhound-0.17.0.0
This adds support for GHC-8.8 it seems. The new bloodhound also drops
supprot for ES1 so this puts those parts of the code under CPP and
adds a deprecation warning.

This is for #124

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,13 +1,14 @@
-resolver: lts-12.26
+resolver: lts-16.18
 packages:
   - katip
   - katip-elasticsearch
   - katip-datadog
   - katip-logzio
 extra-deps:
-  - bloodhound-0.16.0.0
-  - unliftio-core-0.2.0.1
-  - resourcet-1.2.3
+  # ghc 8.8 support
+  - github: wireapp/bloodhound
+    commit: b409f52b518f20a4c20651b5893c31b7b85cb9b1
+allow-newer: true
 flags:
   katip:
     lib-Werror: true
