--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -25,7 +25,7 @@ extra-source-files:
   test/Katip/Tests/Scribes/Handle.hs
   test/Katip/Tests/Scribes/Handle-text.golden
   test/Katip/Tests/Format/Time.hs
-tested-with: GHC == 8.0.1, GHC == 8.2.2, GHC == 8.4.3
+tested-with: GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.3, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.7, GHC == 9.0.2
 
 source-repository head
   type:     git
@@ -54,8 +54,8 @@ library
     OverloadedStrings
 
   build-depends: base >=4.9.0.0 && <5
-               , aeson >=0.6
-               , async < 3.0.0.0
+               , aeson >=2.1.0
+               , async >= 2.0.0.0 && < 3.0.0.0
                , auto-update >= 0.1
                , bytestring >= 0.9
                , containers >=0.4
@@ -65,7 +65,7 @@ library
                , old-locale >= 1.0
                , string-conv >= 0.1
                , template-haskell >= 2.8
-               , text >= 0.11
+               , text >= 1.2.4.0 && < 2.0
                , time >= 1
                , transformers >= 0.3
                , transformers-compat
@@ -73,13 +73,13 @@ library
                , monad-control >= 1.0
                , mtl >= 2.0
                , transformers-base >= 0.3
-               , resourcet >= 1.1
+               , resourcet >= 1.2.0
                , scientific >= 0.3.3.0
                , microlens >= 0.2.0.0
                , microlens-th >= 0.1.0.0
                , semigroups
                , unliftio-core >= 0.1
-               , stm >= 2.4
+               , stm >= 2.4.4.1
 
   hs-source-dirs:      src
   default-language:    Haskell2010
