--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -65,7 +65,7 @@ library
                , old-locale >= 1.0
                , string-conv >= 0.1
                , template-haskell >= 2.8
-               , text >= 1.2.4.0 && < 2.0
+               , text >= 1.2.4.0 && < 1.3 || >= 2.0 && < 2.1
                , time >= 1
                , transformers >= 0.3
                , transformers-compat
