feat: Support payload JSON arrays
Closes https://github.com/Soostone/katip/issues/149

--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -80,6 +80,7 @@ library
                , semigroups
                , unliftio-core >= 0.1
                , stm >= 2.4.4.1
+               , vector
 
   hs-source-dirs:      src
   default-language:    Haskell2010
