--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -81,6 +81,7 @@ library
                , unliftio-core >= 0.1
                , stm >= 2.4.4.1
                , vector
+               , deepseq
 
   hs-source-dirs:      src
   default-language:    Haskell2010
